--- a/languages/conj-lite.pot
+++ b/languages/conj-lite.pot
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 "Project-Id-Version: Conj Lite\n"
-"POT-Creation-Date: 2019-05-19 23:12+0400\n"
+"POT-Creation-Date: 2019-06-02 16:39+0400\n"
 "PO-Revision-Date: 2018-05-14 10:20+0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -336,7 +336,7 @@ msgstr ""
 #: includes/customizer/class-conj-lite-customizer-control-more.php:56
 #, php-format
 msgctxt "more_feature"
-msgid "%s +%s Template Blocks"
+msgid "%1$s +%2$s Template Blocks"
 msgstr ""
 
 #. translators: %s: Emoji unicode
@@ -619,7 +619,7 @@ msgstr ""
 #: includes/nux/class-conj-lite-admin.php:124
 #, php-format
 msgctxt "more_feature"
-msgid "%s +%s template blocks"
+msgid "%1$s +%2$s template blocks"
 msgstr ""
 
 #. translators: %s: Emoji unicode
